[tool.poetry]
name = "kakeibo-exporter"
version = "0.1.0"
description = ""
authors = ["faruryo"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
sqlalchemy = "^1.3.16"
mysql-connector-python = "^8.0.19"
typer = "^0.4.0"
fastapi = "^0.78.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^4.0.0"
black = "^19.10b0"
isort = "^5.0.0"
mypy = "^0.960"
rope = "^0.23.0"
pytest-mock = "^3.1.0"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
kex = 'kakeibo_exporter.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

